Fixes map table spacing

--- a/assets/css/chart_styles.css
+++ b/assets/css/chart_styles.css
@@ -69,7 +69,7 @@ overflow-x: hidden;/**/
 
 /* SVG SPECIFC */
 .domain { stroke: rgba(0,0,0,0) } /* removes strange stroke above svg */
-td { line-height: 0; }​  /* removes strange space below svg in table row */
+#chart td { line-height: 0; }​  /* removes strange space below svg in table row */
 /* AXIS */
 .tick text { stroke-width: 1px; opacity: 1.0; }
 .tick line { stroke-width: 1px; opacity: .2; }
